# promptlight

./: .env.example  CHANGELOG-recency-sorting.md  CLAUDE.md  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
.claude/commands/: dev.md  install.md  prune-branches.md  release.md
.claude/commands/app/: dev.md  install.md  release.md
.github/workflows/: ci.yml  release.yml
docs/: firebase-setup.md  implementation_plan.md  initial_prd.md  issues.md  security-quality-improvement-plan.md
scripts/: build-release.sh  create-dev-certificate.sh  dev.mjs  dev.sh  ingest-icon.sh  install-linux-deps.sh  install.sh  release.sh  sync-version.sh
src/: App.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/auth/: firebase.rs  google.rs  mod.rs  storage.rs
src-tauri/src/data/: commands.rs  firestore.rs  index.rs  local.rs  mod.rs  prompt.rs  search.rs  settings.rs  stats.rs  store.rs  sync.rs
src-tauri/src/os/: focus.rs  hotkey.rs  mod.rs  paste.rs  previous_app.rs  welcome.rs  window.rs
src-tauri/src/os/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src/__tests__/: setup.ts
src/__tests__/components/: IconButton.test.tsx  InlineEdit.test.tsx
src/__tests__/e2e/: debug.spec.ts  (+5 more)
src/config/: constants.ts  iconData.ts
src/hooks/: index.ts  useAutoSave.ts  useDerivedFolders.ts  useEditorKeyboard.ts  useIconPickerPreferences.ts  useKeyboardNav.ts  useLauncher.ts  useSearch.ts  useUIScale.ts  useWindowEvents.ts
src/stores/: authStore.ts  editorStore.ts  launcherCacheStore.ts  launcherStore.ts  settingsStore.ts
src/styles/: global.css  variables.css
src/theme/: DESIGN.md  colors.ts  index.ts  tokens.ts
src/types/: index.ts  prompt.ts  state.ts
src/utils/: format.ts  screen.ts  version.ts
(+72 files in other folders)
