[package]
name = "promptlight"
version = "1.1.2"
description = "A spotlight-style prompt launcher"
authors = ["you"]
edition = "2021"

[lib]
name = "promptlight_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
async-trait = "0.1"
once_cell = "1.19"
# OAuth and HTTP
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["sync", "net", "io-util", "macros"] }
url = "2"
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
opener = "0.7"
dotenvy = "0.15"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
core-graphics = "0.24"
core-foundation = "0.10"

